# shipping/docs/swagger.json
@@ -1,58 +1,77 @@
 {
+    "schemes": [
+        "http"
+    ],
     "swagger": "2.0",
     "info": {
-        "description": "Shipping Address Microservice",
-        "title": "Swiggy Qwik - ShippingAddress Module",
+        "description": "Shipping Service.",
+        "title": "Gin Swagger Example API",
+        "termsOfService": "http://swagger.io/terms/",
         "contact": {
-            "name": "Ashwin Gopalsamy"
+            "name": "API Support",
+            "url": "http://www.swagger.io/support",
+            "email": "support@swagger.io"
         },
         "license": {
-            "name": "Apache 2.0"
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
         },
-        "version": "1.0.0"
+        "version": "2.0"
     },
-    "host": "localhost:9003",
-    "basePath": "/shipping/api",
+    "host": "localhost:7001",
+    "basePath": "/",
     "paths": {
         "/": {
             "get": {
-                "description": "This request will return 200 OK, if server is up and running.",
-                "consumes": [
-                    "application/json"
-                ],
+                "description": "used to check whether shipping service is up and running or not",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "HealthCheckResponse"
+                    "Health"
                 ],
-                "summary": "To check if the service is running or not.",
+                "summary": "Health of shipping service",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handlers.HealthCheckResponse"
+                            "type": "object",
+                            "additionalProperties": true
                         }
                     },
-                    "500": {
-                        "description": "Internal Server Error",
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/handlers.HealthCheckResponse"
+                            "type": "number"
                         }
                     }
                 }
             }
-        }
-    },
-    "definitions": {
-        "handlers.HealthCheckResponse": {
-            "type": "object",
-            "properties": {
-                "database": {
-                    "type": "string"
-                },
-                "server": {
-                    "type": "string"
+        },
+        "/shippingaddress": {
+            "post": {
+                "description": "This Handler allow user to create new Shipping Address",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Shipping Address"
+                ],
+                "summary": "Create Shipping Address",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "number"
+                        }
+                    }
                 }
             }
         }
